<resources>
    <string name="app_name">PopularMovies</string>

    <string name="hello_world">Hello world!</string>

    <string name="release_date_label">Release Date</string>
    <string name="rating_label">Rating</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label">Trailers</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- strings for settings -->
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favorites">Favorites</string>

    <!-- Key name for storing location in SharedPreferences -->
    <string name="prefs_sorting_key">key</string>

    <!-- Key name for storing location in SharedPreferences -->
    <string name="prefs_sorting_default">Most Popular</string>

    <string name="sorting_label">Sort Option</string>
    <string name="favorite_button">Mark as Favorite</string>

    <!-- For Content Provider -->
    <string name="content_authority">com.baxamoosa.popularmovies</string>
</resources>
