<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DetailFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/hello_world"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/sample_0" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_label"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rating_label"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <Button
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:onClick="setFavorite"
                    android:text="@string/favorite_button"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />
        </LinearLayout>

        <TextView
            android:id="@+id/trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/trailers_label"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/fetchmoviereviewstask_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <ListView
                android:id="@+id/listview_trailers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@color/popular_movies_light_blue"
                android:dividerHeight="1dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/reviews_label"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/fetchmoviereviewstask_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <ListView
                android:id="@+id/listview_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@color/popular_movies_light_blue"
                android:dividerHeight="1dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>